Bug 50304 - xls export rowheight problems
Summary: xls export rowheight problems
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.5.0 release
Hardware: Other All
: medium normal
Assignee: Noel Power
URL:
Whiteboard: target:3.6.0 target:3.5.5 target:3.7.0
Keywords:
: 51878 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-05-24 03:41 UTC by Noel Power
Modified: 2013-06-29 13:07 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
test document (13.50 KB, application/vnd.ms-excel)
2012-05-24 03:41 UTC, Noel Power
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Noel Power 2012-05-24 03:41:32 UTC
Created attachment 62052 [details]
test document

I see two problems when exporting an xls document, 
First the default height identification seems buggy, the code currently chooses the last encountered row with a manually set height. Comments in the code seem to indicate that the intention is to choose a default this way if the number of used rows exceeds the number of unused rows ( hmm I am not sure whether that quite makes sense, but I took that comment in good faith and implemented it that way ).
Second any 'blank' row are excluded when exporting. this is the case even when such rows may have non standard heights. Additionally if the default row is *not* chosen from an existing row height then the imported default row height is *not* used.
Comment 1 Not Assigned 2012-05-24 04:53:35 UTC
Noel Power committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9746c6de3a05fe9284d6d6bb2f636bfe912733cd

fix excel row height export problems ( I hope ) fdo#50304
Comment 2 Not Assigned 2012-06-11 03:22:01 UTC
Noel Power committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c9749c917e67a70a0cb283e180fd1c05f0cf3c2a&g=libreoffice-3-5

fix excel row height export problems ( I hope ) fdo#50304


It will be available in LibreOffice 3.5.5.
Comment 3 Joel Madero 2012-06-18 13:42:30 UTC
Is this bub RESOLVED? If it is can you set the Status to RESOLVED -> FIXED. If not please let us know and we'll continue looking into it
Comment 4 Noel Power 2012-06-19 01:51:31 UTC
(In reply to comment #3)
> Is this bub RESOLVED? If it is can you set the Status to RESOLVED -> FIXED. If
> not please let us know and we'll continue looking into it

indeed it is fixed, I will accept patches to fix my memory regarding changing bug state
Comment 5 Not Assigned 2012-07-16 14:56:51 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=de9c6a7829b08968491c8b57b5bd4f182e5e873e&g=libreoffice-3-6

Revert "fix excel row height export problems ( I hope ) fdo#50304"


It will be available in LibreOffice 3.6.
Comment 6 Not Assigned 2012-07-25 17:52:57 UTC
Noel Power committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cad1ab1f12b01aa0b364697aa63ee2fb73b96dd2

Revert "fix excel row height export problems ( I hope ) fdo#50304"
Comment 7 Not Assigned 2012-07-25 17:53:21 UTC
Noel Power committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4ed0eaca6c14aeb652cbebe18081cc9e7e1444ac

hopefully more successful attempt to solve fdo#50304
Comment 8 Chris Peñalver 2013-06-29 13:07:27 UTC
*** Bug 51878 has been marked as a duplicate of this bug. ***