fix excel row height export problems ( I hope ) fdo#50304

Change-Id: I43ddb32ecba36107f5973fa5dcf2499cd1330668